added PCA notebooks and files

--- a/4_neural_network_regression.ipynb
+++ b/4_neural_network_regression.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Update $\\bf w$'s by exposing neuron to each datum.\n",
+    "### Update the $\\bf w$'s by exposing the neuron to each datum.\n",
     "\n",
     "Get our previous data back:"
    ]
