Added Day3 pptx, MLB eda

--- a/6_USBabyNames.ipynb
+++ b/6_USBabyNames.ipynb
@@ -33,6 +33,19 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## **Visit:  http://jhetrick.io/firstname**\n",
+    "\n",
+    "### Enter: *YOUR FIRST NAME* (just one word)\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": true
    },
@@ -44,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"SSAgov.JPG\" align=\"left\">\n"
+    "<img src=\"Imgs/SSAgov.jpg\" align=\"left\">\n"
    ]
   },
   {
